se agrega cerrtificado de wordpress

--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -99,6 +99,13 @@
                 </div>
             </a>
         </div>
+        <div class="row">
+            <a class="text-decoration-none text-black col" href="https://www.domestika.org/es/certificates/bb6eaf31901d57c4d00740c441169645" target="_blank"><div class="texto lista item-ed">
+                    <h5 class="fw-bold">Creación de una tienda online en WordPress - Domestika.com (Jul. 2024)</h5>
+                    <img class="cert-edu" src="/certificados/certificado-wordpress.png" alt="Certificado tienda online en WordPress">
+               </div>
+             </a>
+        </div>
     </section>
     </main>
 </div>
