--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -47,10 +47,15 @@
             <div class="row">
                 <a class="text-decoration-none text-black col" href="">
                     <div class="texto listas item-ed">
-                        <h5 class="fw-bold">Desarrollo Web - Coderhouse.com (May. 2024 - en Curso)</h5>
+                        <h5 class="fw-bold">Desarrollo Web - Coderhouse.com (Jul. 2024)</h5>
                         <img class="cert-edu" src="/certificados/work-in-progress.jpg" alt="work in progress">
                     </div>
                 </a>
+                <a class="text-decoration-none text-black col" href="https://www.domestika.org/es/certificates/bb6eaf31901d57c4d00740c441169645" target="_blank"><div class="texto lista item-ed">
+                    <h5 class="fw-bold">Creación de una tienda online en WordPress - Domestika.com (Jul. 2024)</h5>
+                    <img class="cert-edu" src="/certificados/certificado-wordpress.png" alt="Certificado tienda online en WordPress">
+               </div>
+             </a>
                 <a class="text-decoration-none text-black col" href="https://www.coderhouse.com/ar/certificados/655486c7b4768c5abe55ee4e?lang=es" target="_blank">
                     <div class="texto listas item-ed">
                         <h5 class="fw-bold">SQL - Coderhouse.com (nov. 2023)</h5>
@@ -92,11 +97,6 @@
                     <img class="cert-edu" src="/certificados/certificado-canva.png" alt="Certificado Canva">
                 </div>
             </a>
-            <a class="text-decoration-none text-black col" href="https://www.domestika.org/es/certificates/bb6eaf31901d57c4d00740c441169645" target="_blank"><div class="texto lista item-ed">
-                    <h5 class="fw-bold">Creación de una tienda online en WordPress - Domestika.com (Jul. 2024)</h5>
-                    <img class="cert-edu" src="/certificados/certificado-wordpress.png" alt="Certificado tienda online en WordPress">
-               </div>
-             </a>
         </div>
     </section>
     </main>
