se agrega certificado de dasarrollo web

--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -48,7 +48,7 @@
                 <a class="text-decoration-none text-black col" href="">
                     <div class="texto listas item-ed">
                         <h5 class="fw-bold">Desarrollo Web - Coderhouse.com (Jul. 2024)</h5>
-                        <img class="cert-edu" src="/certificados/work-in-progress.jpg" alt="work in progress">
+                        <img class="cert-edu" src="/certificados/certificado-desarrolloWeb-Coderhouse.png" alt="Desarrollo Web - Coderhouse.com">
                     </div>
                 </a>
                 <a class="text-decoration-none text-black col" href="https://www.domestika.org/es/certificates/bb6eaf31901d57c4d00740c441169645" target="_blank"><div class="texto lista item-ed">
